src/objects/Hash_Tag__c.object
<CustomObject>
    <description>Any tagging on an event or order or ticket or item can go here.</description>
    <fields>
        <fullName>BLN_Item_Pool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BLN Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipLabel>BLN Event Tags</relationshipLabel>
        <relationshipName>BLN_Event_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Event_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>Hash_Tag__c</referenceTo>
        <relationshipLabel>BLN Event Tags</relationshipLabel>
        <relationshipName>BLN_Event_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RowId__c</fullName>
        <label>RowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Name__c</fullName>
        <label>Table Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Text__c</fullName>
        <label>Tag Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BLN Event Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag_Text__c</columns>
        <columns>Event__c</columns>
        <columns>Table_Name__c</columns>
        <columns>RowId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TAG-{0000}</displayFormat>
        <label>Tag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Event Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>